# dogonnet

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DATADOG_API_VERSION.md  MANIFEST.in  PRODUCTION_CHECKLIST.md  PROJECT_STATUS.md  PR_DESCRIPTION.md  PUBLISHING_CHECKLIST.md  README.md  ROADMAP.md  SETUP_COMPLETE.md  TODO.md  VALIDATION.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  publish.yml  test.yml
docs/: AGENT_GUIDE.md  COOKBOOK.md  index.md
examples/: README.md  basic.jsonnet  golden-signals.jsonnet  infrastructure.jsonnet  service-health.jsonnet
scripts/: validate_examples.py
src/doggonet/: __init__.py
src/doggonet/cli/: __init__.py  main.py
src/doggonet/client/: __init__.py  dashboard.py
src/doggonet/lib/: __init__.py  main.libsonnet  widgets.libsonnet
src/doggonet/utils/: __init__.py  jsonnet.py
src/dogonnet/: __init__.py
src/dogonnet/cli/: __init__.py  main.py
src/dogonnet/client/: __init__.py
src/dogonnet/lib/: __init__.py  main.libsonnet
src/dogonnet/utils/: __init__.py  jsonnet.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_all_widgets.py  test_cli.py  test_client.py  test_jsonnet.py
